Added beta support for multi device beta